charts/nodey460/resources/service.yaml
---
# Source: nodey460/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodey460
  labels:
    chart: "nodey460-1.0.57"
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nodey460-nodey460
